fixed banner, profile, and alignment on skills section

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
 }
 body {
 	color: #444444;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 h1 {
 	font-size: 48px;
@@ -41,11 +41,15 @@ div{
 	display:block;
 }
 
-ul li{
-	display:block;
-	-webkit-margin-start: 0px;
-	-webkit-margin-end:0px;
+ul{
+	list-style-type:none;
+	display:inline;
+	font-family: 'Lato', sans-serif;
+	color:whitesmoke;
+	padding: 0;
+
 }
+
  .nav {
  	width: 100%;
  	margin: 0;
@@ -87,8 +91,9 @@ ul li{
 	font-family: 'Oswald', sans-serif;
 }
 
-.menu a.active {
-	color: #6494BF;
+.menu a:hover {
+	background-color:#170F34;
+    color:white;
 }
 
 /* BANNER 
@@ -101,7 +106,7 @@ img.profile {
 }
 .banner {
 	padding-top: 250px;
-	padding-bottom: 250px;
+	padding-bottom: 350px;
 	max-width: 100%;
 	max-height: 100%;
 	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/banner.jpg');
@@ -126,7 +131,7 @@ img.profile {
 /* ABOUT
 -----------------------------------------*/
 .about {
-	background: url('../images/tile1.png');
+	background: whitesmoke;
 	overflow: hidden;
 	text-align:center;
 }
@@ -137,58 +142,38 @@ img.profile {
 	text-align: center;
 }
 
+.aboutbox{
+	width: 650px;
+	margin: 0 auto;
+}
 
 /* SKILLS
 -----------------------------------------*/
 .skills{
 	width: 100%;
+	height:100%;
 	padding-top: 70px;
 	padding-bottom: 80px;
 	margin-bottom: 0px;
 	padding-left: 15%;
 	padding-right: 15%;
 	overflow:hidden;
-	text-align: center;
-	z-index:1;
+	z-index:0;
+	background-color:#170F34;
+	text-align:center;
 	display:inline-block;
 }
-.skillone{
-	width: 32.5%;
-	margin-right: 0.5%;
-	text-align: center;
-	margin-bottom: 50px;
-	transition: all 0.5s;
+.skillgen{
+	text-align:center;
+	display:inline;
+	list-style-type:none;
 }
 
-.skilltwo{
-	width: 32.5%;
-	margin-right: 0.5%;
-	text-align: center;
-	margin-bottom: 50px;
-	transition: all 0.5s;
+.skillheader{
+	color:whitesmoke;
+	font-family: 'Lato', sans-serif;
 }
-.skillthree{
-	width: 32.5%;
-	margin-right: 0.5%;
-	text-align: center;
-	margin-bottom: 50px;
-	transition: all 0.5s;
-}
-.skillone ul li{
-	margin:0;
-	padding-bottom: 7px;
-	list-style-type:none;
-}
-.skilltwo ul li{
-	margin:0;
-	padding-bottom: 7px;
-	list-style-type:none;
-}
-.skillthree ul li{
-	margin:0;
-	padding-bottom: 7px;
-	list-style-type:none;
-}
+
 /* FAVOURITES 
 -----------------------------------------*/
 .fav-img {
